Try to fix sprites and make some improvements with checkboxes and collapsable panels.

--- a/packages/vapor/less/forms/checkboxes.less
+++ b/packages/vapor/less/forms/checkboxes.less
@@ -111,7 +111,6 @@ input[type=checkbox].coveo-slide-toggle {
         width: 42px;
         height: 20px;
         display: inline-block;
-        vertical-align: middle;
         border-radius: 2px;
     }
 
